<resources>
    <string name="app_name">HelloDialogFragment</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="close">Close</string>
    <string name="top_text">Fresh Fruits,\nVegitable and Flowers</string>
    <string name="price_text">$5 OFF</string>
    <string name="text1">any ONE(1) $20 or more purchase of\n conventionally grown fruits, flowers or vegitables,\n except long-stem roses.</string>
    <string name="text2">Valid only once through 02/28/2017</string>
    <string name="text3">Limit one coupon per purchase of  specified product(s) per individual.Valid customer bar code must be
     presented at checkout.Quantities are limited and may not be available in all stores; no rain checks.Prices may vary. We reserve the right to
    correct errors. Void to the extent prohibited or restricted  by law. No monetary value.Valid only in the U.S.A. Not valid at Whole Foods Market
    TM 365 locations.</string>
</resources>
